--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ SMTP_PASSWORD=xsmtpsib-fdc47f45a120b4bf0393c9a7f1693c0566d41f59e9578f1fa616d2989
 SMTP_FROM=sorockshestoi@gmail.com
 JWT_SECRET=VOQjLdrpG1TWCHhDzv3o
 APP_DOMAIN=http://localhost:3000/auth
-ENABLE_CLOUDINARY=true
-CLOUD_NAME=diefffece
-API_KEY=822244418985932
-API_SECRET=KAFGjld3Hxdj9WPxG8Ir3frwyQ0
+ENABLE_CLOUDINARY=
+CLOUD_NAME=
+API_KEY=
+API_SECRET=
